# earth-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build
esim/: CMakeLists.txt  esim_main.cc  esim_refactor.cc
esim/assets/glsl/: atmosphere.frag  atmosphere.vert  atmosphere_common.glsl  blend.frag  blend.vert  blur.frag  bounding_box.frag  bounding_box.vert  common.glsl  outer_space.frag  outer_space.vert  screen.frag  screen.vert  solar.frag  solar.vert  sun.frag  sun.vert  surface.frag  surface.fs  surface.vert  surface.vs
esim/core/: CMakeLists.txt
esim/core/core/: fifo.inl  observer.h  subject.h  utils.h
esim/core/core/transform/: astron.h  astron.inl
esim/core/include/core/: bitmap.h  bounding_box.h  fifo.h  observer.h  publisher.h  time.h  time.inl  transform.h  utils.h
esim/core/include/core/transform/: astron.inl  geo.h  geo.inl
esim/core/include/glapi/: buffer.h  buffer.inl  debug.h  program.h  program.inl  shader.h  shader.inl  texture.h  texture.inl
esim/core/src/: bitmap.cc  observer.cc  publisher.cc  subject.cc
esim/esim/: CMakeLists.txt
esim/esim/include/esim/: esim_controller.h  protocol.h
esim/esim/include/scene/: camera.h  camera.inl  information.h  sun.h
esim/esim/src/: esim_controller.cc  esim_controller_opaque.h  esim_controller_opaque.inl
esim/main/: CMakeLists.txt
esim/main/include/details/: camera.h  camera.inl  information.h  protocol.h  sun.inl
esim/main/include/esim/: esim_controller.h  esim_engine.h  esim_enginer.h
esim/main/include/scene/: sun.inl
esim/main/src/: esim_controller.cc  esim_controller_opaque.cc  esim_controller_opaque.h  esim_controller_opaque.inl  esim_engine.cc  esim_engine_opaque.cc  esim_engine_opaque.h  esim_engine_opaque.inl  esim_render_pipe.cc  esim_render_pipe.h
esim/main/src/details/: basemap_storage.cc  basemap_storage.h  surface_vertex_engine.cc  surface_vertex_engine.h
esim/main/src/programs/: atmosphere_program.h  bounding_box_program.h  screen_program.h  skysphere_program.h  surface_program.h
esim/main/src/scene/: atmosphere.cc  atmosphere.h  scene_entity.h  skysphere.cc  skysphere.h  stellar.cc  stellar.h  surface_collections.cc  surface_collections.h  surface_tile.cc  surface_tile.h
esim/main/src/scene/impl/: atmosphere.cc  stellar.cc  surface_collections.cc  surface_tile.cc
esim/main/src/scene/programs/: atmosphere_program.h  blend_program.h  blur_program.h  common_program.h  common_shaders.h  sun_program.h  surface_program.h
esim/scene/: CMakeLists.txt
esim/scene/scene/: scene_controller.cc  scene_controller.h  scene_engine.cc  scene_engine.h  scene_message.h  scene_renderer.cc  scene_renderer.h
esim/scene/scene/layers/: atmosphere.cc  atmosphere.h  debug_layer.cc  debug_layer.h  outer_space.cc  outer_space.h  solar.cc  solar.h  surface_layer.cc  surface_layer.h  surface_node.cc  surface_node.h
esim/scene/scene/programs/: atmosphere_program.h  bounding_box_program.h  outer_space_program.h  solar_program.h  surface_program.h
esim/scene/scene/render/: rendering_infos.h
esim/trans/: CMakeLists.txt
esim/trans/transform/: maptile.h  solar.h  solar.inl  timing.h  transform_helper.h  wgs84.cc  wgs84.h  wgs84_decl.h
esim/utils/: CMakeLists.txt
esim/utils/glapi/: array_buffer.h  buffer_object.h  gl_helper.h  program.h  shader.h  texture.h
esim/utils/utils/: camera.h  fifo.h  keys.h  numeric.h  observer.h  sun.h  sun.inl  utils.h
src/: camera.h  main.cc  surface.cc  surface.h  surface_node.cc  surface_node.h  utils.h
src/controller/: mouse.h
src/coord/: screen.h  transform.h
src/glapi/: buffer_object.h  gl_helper.h  program.h  shader.h
src/glsl/: bounding_box.frag  bounding_box.vert  surface.fs  surface.vs
src/scene/: bounding_box_program.h  scene_controller.cc  scene_controller.h  scene_engine.cc  scene_engine.h  scene_message.h  scene_renderer.h  surface_layer.cc  surface_layer.h  surface_node.cc  surface_node.h  surface_program.h
src/scene/layers/: surface_layer.cc  surface_layer.h  surface_node.cc  surface_node.h
src/scene/programs/: bounding_box_program.h  surface_program.h
src/utils/: fifo.h  numeric.h  observer.h
test/: CMakeLists.txt  coord.cc  main.cc  test_fifo.cc  test_helper.h  test_subject_observer.cc  transform.cc
